--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ b {
 
 .NameBox-Text {
   position: absolute;
-  top: 45%;
+  top: 55%;
   left: 50%;
   width: 100%;
   transform: translate(-50%, -50%);
@@ -49,8 +49,8 @@ b {
 /************** ProjectList Styling *************/
 
 .ProjectList {
-  height: 30rem;
   animation: fadein 4s;
+  margin: 1rem 0;
 }
 
 @keyframes fadein {
@@ -66,7 +66,6 @@ b {
 .ProjectCard-Card {
   position: relative;
   height: 14rem;
-  width: 27rem;
   margin: 1rem 3rem;
   border: 1px solid rgb(221, 218, 218);
   background-size: 100%;
@@ -101,7 +100,7 @@ b {
   left: 2rem;
   text-align: center;
   top: 50%;
-  width: 60px;
+  width: 60%;
   margin: auto;
   color: white;
   z-index: 100;
@@ -119,11 +118,11 @@ b {
   transition: .6s .3s;
 }
 
-.ProjectCard-Text {
+/* .ProjectCard-Text {
   width: 27rem;
   position: absolute;
   left: 10%;
-}
+} */
 
 /************** Footer Styling *************/
 
